# portfolio-risk-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
api/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: advisor.tsx  correlation.tsx  cumulative.tsx  metric-grid.tsx  monte-carlo.tsx  sectors.tsx  sidebar.tsx  weights.tsx
frontend/lib/: api.ts
portfolio_risk/: data.py  metrics.py  returns.py  simulation.py
tests/: test_metrics.py
