[project]
name = "portfolio-risk-analyzer"
version = "0.1.0"
description = "Stock portfolio risk analysis tool"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "numpy>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]